Fix navbar alignment with flexbox

--- a/src/styles/AppStyle.css
+++ b/src/styles/AppStyle.css
@@ -34,7 +34,7 @@
 .navbar > div:first-child {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   margin: 0px;
   padding: 0px;
   width: 100%;
@@ -44,21 +44,6 @@
   min-height: 0px;
   font-size: xx-large;
 }
-
-/* Not sure what this is. Queue for deletion 2/9/24 */
-/* .navbar > div:first-child {
-  display: flex;
-  align-items: right;
-  justify-content: left;
-  margin: 0px;
-  padding: 10px;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  min-width: 0px;
-  min-height: 0px;
-  font-size: xx-large;
-} */
 
 .navbar > div:not(:first-child) {
   display: flex;
